General update including clarification on support and a python binding.